--- a/src/components/pages/LandingPage/LandingPage.module.css
+++ b/src/components/pages/LandingPage/LandingPage.module.css
@@ -3,7 +3,7 @@
   overflow-x: hidden;
 }
 body {
-  
+  background-color: #1b083d;
   max-width: 1280px;
   margin: 0 auto !important;
   float: none !important;
@@ -20,10 +20,33 @@ body {
 }
 .event_sep {
   position: absolute;
-  left: 220px;
+  left: 200px;
   top: -57px; 
 }
+.line_sep1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50vw;
+  margin-left: 260px;
+  margin-top: 80px;
+}
 .line_sep {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50vw;
+  margin-left: 260px;
+  margin-top: -200px;
+}
+.section_for_mobile {
+  display: none;
+}
+.texture_bg {
+  /* margin: ; */
+  height: 50vh;
+  /* mix-blend-mode: screen; */
+  background: linear-gradient(180deg, #14052C 0%, #1D033E 100%);
 }
 @media screen and (max-width: 786px) {
 
@@ -33,16 +56,44 @@ body {
   .login_button button {
     width: 100vw;
   }
+  .section_for_web {
+    display: none;
+  }
+  .section_for_mobile {
+    display: block;
+  }
+  .texture_bg {
+    /* margin: ; */
+    height: 10vh;
+    /* mix-blend-mode: screen; */
+    background: linear-gradient(180deg, #14052C 0%, #1D033E 100%);
+  }
+  .line_sep {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50vw;
+    margin-left:100px;
+    margin-top: 80px;
+  }
+  .line_sep1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50vw;
+    margin-left:100px;
+  }
   .about_sep {
     position: relative;
-    display: block;
+    display: none;
     margin: 0 auto;
   }
   .event_sep {
     position: relative;
-    display: flex;
+    display: none;
     margin: 0 auto;
   }
-
-
+ .Section_section_title__Zi2Ev {
+   display: none;
+ }
 }
