--- a/src/components/pages/LandingPage/Section/Section.module.css
+++ b/src/components/pages/LandingPage/Section/Section.module.css
@@ -81,7 +81,8 @@
   font-size: 48px;
   line-height: 60px;
   color: #fcc907;
-  top: 12vh;
+  top: 10vh;
+  margin-left: 15px;
   /* float: left; */
   /* padding-left: 10vw; */
   /* text-align: left; */
@@ -104,13 +105,13 @@
 .section_button {
   display: flex;
   position: absolute;
-  left: 2vw;
+  left: 1vw;
   width: 250px;
   bottom: -10vh;
   font-family: Nunito Sans;
   font-style: normal;
   font-weight: bold;
-  font-size: 1.3em;
+  font-size: 1.4em;
   /* line-height: 33px; */
 }
 .section_button a {
@@ -140,6 +141,7 @@
     padding-top: 5vh;
     position: relative;
     /* text-align: center; */
+    left: 7vw;
     justify-content: center;
     /* align-items: center; */
     bottom: 0vh;
