--- a/src/components/pages/Events/events.css
+++ b/src/components/pages/Events/events.css
@@ -5,17 +5,20 @@ body {
 .event_page {
   background: #1D033E;
   overflow: hidden;
+  padding: 20px;
 }
 .tabs {
   color: #fff;
   width: 50vw;
-  margin-top: 50px;
+  margin-top: 10px;
   text-align: left;
   position: relative;
 }
 .card-container {
-  max-width: 1000px;
+  max-width: 900px;
   position: relative;
+  margin: 20px;
+  margin-left: 50px;
 }
 .card-div h3 {
   position: absolute;
@@ -24,10 +27,10 @@ body {
   left: 18px;
 }
 .card {
-  margin-right: 126px;
-  margin-top: 50px;
-  width: 100vw;
-  height: 440px;
+  margin-right: 100px;
+  margin-top: 10px;
+  max-width: 450px;
+  height: 400px;
   transition-duration: 300ms;
   transition-property: transform;
   transition-timing-function: ease-out;
@@ -70,7 +73,7 @@ body {
 .card-img {
   /* object-fit: cover; */
   position: relative;
-  height: 240px;
+  height: 220px;
   width: 100%;
 }
 .event-cards {
@@ -78,8 +81,9 @@ body {
  /* float: left; */
  margin: 0 auto;
  justify-content: flex-start;
- width: 90vw;
- padding-right: 80px;
+ width: 80vw;
+ padding-right:200px;
+ padding-bottom: 60px;
 }
 .all-events {
   display: flex;
@@ -349,17 +353,22 @@ width: 80vw;
   }
   .event-cards {
     flex-wrap: wrap;
-  }
+    justify-content: space-between;
+    margin-left: -15px;
+}
+
   .sidebar {
     display: none;
   }
   .showOnMobile {
     display: block;
+    background: #1D033E;
   }
   .card {
-    /* width: 60vw; */
-    margin-right: 0px;
+    width: 60vw;
+    margin-right: -150px;
     flex-wrap: wrap;
+    margin-top: 40px;
   }
   .workshop-cards {
     flex-wrap: wrap;
@@ -418,6 +427,7 @@ width: 80vw;
    }
    .mobile li {
      padding: 20px;
+     margin-left: 14px;
    }
    .mobile a {
      text-decoration: none;
