minor css issue

--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -69,6 +69,13 @@ image {
   }
 
   .btn {
-    width: 100%;
+    width: 129px;
+    position: absolute;
+    top: 350px;
+    display: flex;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+    left: 25px;
   }
 }
