--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -64,7 +64,7 @@
 }
 .nav-item {
   height: 80px;
-  margin-right: -20px;
+  margin-right: 20px;
 }
 .img {
   height: 80px;
@@ -178,7 +178,10 @@
     font-size: 1.8rem;
     cursor: pointer;
   }
-
+.sign {
+  position: absolute;
+  top: 400px;
+}
   .fa-times {
     color: rgb(255, 255, 255);
     font-size: 2rem;
