--- a/src/components/Cart.css
+++ b/src/components/Cart.css
@@ -73,6 +73,65 @@
     display: flex;
     flex-direction: column;
   }
+  .register-form{
+    background-color: #1b083d;
+    background-opacity:0.4;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width:30%;
+    height:400px;
+    border-radius:10px;
+    box-shadow:0px 0px 100px #000;
+    z-index:2;
+  }
+  .reg-text{
+    position:absolute;
+    font-family:sans-serif;
+    font-size:15px;
+    text-transform: capitalize;
+    top:20px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #383838;
+
+  }
+  .reg-form{
+    position:relative;
+    top:70px;
+    margin:40px;
+    height:200px;
+  }
+
+
+  .text input{
+    width:100%;
+    heiht:0px;
+    margin:10px auto;
+    border:none;
+    outline:none;
+  }
+  hr{
+    position:relative;
+    top:-10px;
+    opacity:0.5;
+  }
+.terms label{
+display: block;
+padding-left: 25px;
+font-family:sans-serif;
+font-size:12px;
+color:grey;
+text-indent: -18px;
+}
+.register-button{
+  position: absolute;
+  top: 100px;
+}
+.largen:active{
+transform: scale(2);
+}
   @media screen and (max-width: 768px) {
     .cart-container {
       width: 200px;
